appId: org.malibusar.app
---
- assertVisible:
    id: header-title
    text: ${TITLE}

- assertVisible:
    text: ${TITLE}
    index: 1
- assertVisible: John Doe
- assertVisible: 555-555-5555
- assertVisible: Jane Doe
- assertVisible: 555-555-1234
- runFlow:
    when:
      platform: Android
    commands:
      - assertVisible: MAL SAR
- assertVisible: tag 100
- assertVisible: Details of the callout.

- scrollUntilVisible:
    centerElement: true
    element:
      text: Location

- runFlow:
    when:
      platform: Android
    commands:
      - assertVisible: Google Map

- runFlow:
    when:
      platform: iOS
    commands:
      - assertVisible:
          id: AnnotationContainer

- assertVisible: '1925 Las Virgenes Road, Calabasas, CA 91302'
- assertVisible: Description of the specific location.

- assertVisible: Active

- tapOn: Log.*
- runFlow:
    when:
      platform: Android
    commands:
      - assertVisible: "Callout updated.\nRadio channels added: ['C41', 'C42']"
      - assertVisible: "Callout updated.\nNotifications added: ['SP']"
- assertVisible: Message...

- tapOn: Info
- runFlow:
    when:
      platform: Android
    commands:
      - assertVisible: 'C41, C42'
      - assertVisible: SP
